Update App.css, App.js, Header.js, and add Fields.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,39 @@
 .App {
   text-align: center;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-h1{
+h1 {
   margin: 0;
 }
 
-.header{
-  background-color: rgb(61, 160, 61);
-  padding: 8px;
+.header {
+  color: white;
+  background-color: #192a56;
+  padding: 15px;
+  width: 100%;
+}
+
+.form {
+  margin-top: 20px;
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.data_val {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  padding: 0px 9px opx 9px;
+  background-color: rgb(174, 165, 165);
 }
